--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 cloudinary==1.42.1
@@ -15,10 +16,9 @@ psycopg2==2.9.10
 requests==2.32.3
 setuptools==75.8.0
 six==1.17.0
+soupsieve==2.6
 sqlparse==0.5.3
+typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 whitenoise==6.8.2
-beautifulsoup4==4.13.3
-soupsieve==2.6
-typing-extensions==4.12.2
